SCROLLBAR FIX

--- a/PageCss.css
+++ b/PageCss.css
@@ -119,7 +119,7 @@ max-width: 200px;
   transition:all 400ms ease;
   list-style-type: none;
   z-index: 2;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 @media screen and (max-width: 450px) {
